fix: abort失败
